hphp/hack/test/typecheck/as_expression/class2.php.exp
File "class2.php", line 15, characters 28-28:
The type B expects 1 type parameter(s) (Typing[4101])
File "class2.php", line 16, characters 28-28:
The type B expects 1 type parameter(s) (Typing[4101])
File "class2.php", line 16, characters 13-28:
Invalid argument (Typing[4110])
  File "class2.php", line 27, characters 22-27:
  This is a string
  File "class2.php", line 16, characters 13-23:
  It is incompatible with a value of generic type T#2 from this "as" assertion
File "class2.php", line 19, characters 13-31:
Invalid argument (Typing[4110])
  File "class2.php", line 27, characters 22-27:
  This is a string
  File "class2.php", line 19, characters 13-23:
  It is incompatible with a value of generic type T#4 from this "as" assertion
